Mon, 14 Jul 2008 12:21:37 -0400 <me@nikosapi.org>
Merge patch to fix bug #125 (Deleting a podcast while checking for new
episodes allows a second concurrent sync.)

	* src/gpodder/gui.py: make update_feed_cache() check if the feed cache
	is being updated before allowing an update to take place

Sun, 13 Jul 2008 15:32:22 -0400 <me@nikosapi.org>
Fix python 2.4 crash (reported by: Wilfred van Rooijen)

	* src/gpodder/draw.py: change ".5 if close else 0" to valid python
	2.4 syntax

Sun, 13 Jul 2008 15:19:39 -0400 <me@nikosapi.org>
Fix MP3PlayerDevice traceback when syncing (reported by: Wilfred van Rooijen)

	* src/gpodder/sync.py: make Device.__track_on_device() non-private

Sat, 12 Jul 2008 14:12:11 +0200 <jerome.chabod@ifrance.com>
Merge patch to fix bug #149 (Remove Old Podcasts does not always have enabled 
delete button)
	* src/gpodder/gui.py: Use count of selected episodes instead of total
    size to activate action button in episode selector (episodes with
    unknow size have a total size of zero) 

Fri, 11 Jul 2008 14:11:08 -0400 <me@nikosapi.org>
Merge patch to fix bug #147 (Sync doesn't work)

	* src/gpodder/gui.py: Use Device.episode_on_device(episode) to retrive
	device_episode and simplify logic to determine whether an episode is on
	the device and eligible for removal
	* src/gpodder/sync.py: Add Device.episode_on_device(episode)

Fri, 11 Jul 2008 13:09:55 -0400 <me@nikosapi.org>
Update podcast tab title when adding or removing channels

	* src/gpodder/gui.py: Add update_podcasts_tab() and call it when a
	channel is added or removed

Thu, 10 Jul 2008 23:54:57 +0200 <thp@perli.net>
Update list of donators

	* src/gpodder/gui.py: Update list of donators

Thu, 10 Jul 2008 23:49:12 +0200 <thp@perli.net>
Don't warn the user when timestamp is None

	* src/gpodder/util.py: Don't warn the user when timestamp is None in
	gpodder.util.format_date; Thanks to Bernd Schlapsi for reporting this
	bug (Closes: http://bugs.gpodder.org/show_bug.cgi?id=148)
