@@ -1,3 +1,12 @@
+Mon, 14 Jul 2008 12:31:15 -0400 <me@nikosapi.org>
+Merge patch to fix bug #122 (Day of week Released date not computed correctly)
+
+	* src/gpodder/libpodcasts.py: use rfc822.mktime_tz() to convert
+	timestamps from feedparser's _parse_date() function to seconds from
+	the epoch (in UTC instead of the local timezone)
+	* src/gpodder/util.py: fix util.format_date() so that when it reports
+	'Today', it means the timestamp is from after 00:00 local time
+
 Mon, 14 Jul 2008 12:21:37 -0400 <me@nikosapi.org>
 Merge patch to fix bug #125 (Deleting a podcast while checking for new
 episodes allows a second concurrent sync.)
